@@ -1,4 +1,4 @@
 DIST fast-stemmer-1.0.1.gem 11776 SHA256 80a12b655ebc7fb2ce85f031e249691fda88c4c7a7742b8cc0e1db3537906440 SHA512 53a2aca0cddc1ab9233236365b551488275e1776b1261b613b356bf43933056ea75a601a2e1515bf4345dee3c6b50f513aa8539c886f75be47b821a3e70eed2e WHIRLPOOL 50ecce3dc231096ec411ab4f4793086ec8a718713de0f1a1c9ebfa9237831a4af61eed4308f37274c7bb6b3a72125e096985c827b1b8298225959ba890eb7119
-EBUILD fast-stemmer-1.0.1.ebuild 805 SHA256 245a95d5650434d4d433a6a413e783405d14bd385f5d2304170dda889e96c1b8 SHA512 346cacedcc7db3f57127e94fcdaf453bf15fc7cc5301141ed93657f2a39ee7d70422382e384cf9725cf2515a5d0907198c654e81a4be7c6a1bd8ba676365e0f6 WHIRLPOOL b58418f96e1ccb0f08dbfc73943e3a751f7b61a12950a74a7f47c68ac6f596ec82521227171505fe10de15fb34f4e659daa22956772639f821f666d4cc6b6378
-MISC ChangeLog 442 SHA256 0d9dad9fc8ab33b9256faaeab1f95b59268b3d10f8b758d494fd5b8760dc51d9 SHA512 2ce9bb91423c3cb2dcd7cd28dd1f37ed38886bc8af78fc80d19691911960f661501bb3237b7d44fd0e9ae518c93eae2539415f516c9cd961f39eacabc51a5bbf WHIRLPOOL 3a17d0eb1b2d179825222a80654f05a586f167d837930bd24f5ad5047247d4722d638a0d23ecfd880e0771930cc266d42340acf703d9ae39f93c618e0d5dbaab
+EBUILD fast-stemmer-1.0.1.ebuild 688 SHA256 f12d381de864721bfc6f9aa3fb12a1a66756adcc82dcfe827feed7c604a60df1 SHA512 23a4402fd351709a553bcb368b0e4e2d7c1fafd6745ec0d90d181c7e359735f0e22c1cffc8c3b909b4dc4007a7ed9628fc4cb2bdf6b62f178f8f5330ef070356 WHIRLPOOL 0eeac932fee7f29c36ce8b9d2df408d2dc4680d8d64aae79af83e1c70e7a4203025c255a16d379abd452c5265115d29e7509192ae33376982fb8c28e828e65a8
+MISC ChangeLog 579 SHA256 3bb24537b8e927ed07e20484159d71f7dd89114c418acc5987ebda9c39db87d5 SHA512 be2e0b88278480b6701c71e5f46644299f26f661380fe75253dc9f1b043d4ceef70e33098c081406e70352be9f142d9c853ede384dd8bb39b49bd9f90d1d1dbc WHIRLPOOL bd0cb52410a7063714aaa6df92f417630c899bbeddcfa79f27bbc8362c849a1b1cc685ba27203fedd1bc1d737178e7ab6d72fda929f0a50fd2e828765184eac0
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
