@@ -1,3 +1,6 @@
+  22 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu fast-stemmer-1.0.1.ebuild:
+  dev-ruby/fast-stemmer: Further fixes, thanks to graaff
+
   16 Sep 2012; Manuel Rüger (mrueg) gentoo@rueg.eu fast-stemmer-1.0.1.ebuild:
   dev-ruby/fast-stemmer: Fixes to the ebuild, compile library
 
